gitops/apps/paralus/dashboard-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  labels:
    app.kubernetes.io/part-of: paralus
    app.kubernetes.io/name: dashboard
    app.kubernetes.io/instance: paralus
    app.kubernetes.io/component: workload
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dashboard
      app.kubernetes.io/instance: paralus
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: paralus
        app.kubernetes.io/name: dashboard
        app.kubernetes.io/instance: paralus
        app.kubernetes.io/component: workload
    spec:
      serviceAccountName: paralus-ztka
      securityContext: {}
      containers:
        - name: dashboard
          securityContext: {}
          image: 'paralusio/dashboard:v0.2.3'
          imagePullPolicy: IfNotPresent
          ports:
            - name: nginx
              containerPort: 80
          resources: {}
---
