gitops/apps/paralus/kratos-courrier-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: paralus-kratos-courier
  namespace: default
  labels:
    app.kubernetes.io/name: kratos
    app.kubernetes.io/instance: paralus
  annotations:
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: paralus-kratos-courier
      app.kubernetes.io/instance: paralus
  serviceName: paralus-kratos-courier
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: paralus-kratos-courier
        app.kubernetes.io/instance: paralus
      annotations:
        checksum/kratos-config: ecf3929f074bd6d6ae2daa23f3a288fab233832e15390a1cfd29ad4460d34eaf
        checksum/kratos-templates: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
    spec:
      serviceAccountName: paralus-kratos
      containers:
        - name: paralus-kratos-courier
          image: oryd/kratos:v26.2.0
          imagePullPolicy: IfNotPresent
          args:
            - courier
            - watch
            - --config
            - /etc/config/kratos.yaml
          volumeMounts:
            - name: paralus-kratos-config-volume
              mountPath: /etc/config
              readOnly: true
            - mountPath: /etc/kratos
              name: other-configs
            - mountPath: /etc/kratos/hooks/kratos-config-hooks.yaml
              name: kratos-config-hooks
              subPath: kratos-config-hooks.yaml
          resources: null
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 100
        - name: synchronizer
          image: 'paralusio/kratos-synchronizer:v0.3.0'
          volumeMounts:
            - name: other-configs
              mountPath: /etc/kratos
      volumes:
        - name: paralus-kratos-config-volume
          configMap:
            name: paralus-kratos-config
        - emptyDir: {}
          name: other-configs
        - configMap:
            defaultMode: 420
            name: kratos-config-hooks
          name: kratos-config-hooks
