gitops/apps/paralus/kratos-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paralus-kratos
  namespace: default
  labels:
    app.kubernetes.io/name: kratos
    app.kubernetes.io/instance: paralus
  annotations:
spec:
  progressDeadlineSeconds: 3600
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 30%
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: kratos
      app.kubernetes.io/instance: paralus
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kratos
        app.kubernetes.io/instance: paralus
    spec:
      volumes:
        - emptyDir: {}
          name: other-configs
        - configMap:
            defaultMode: 420
            name: kratos-config-hooks
          name: kratos-config-hooks
        - name: kratos-config-volume
          configMap:
            name: paralus-kratos-config
      automountServiceAccountToken: true
      serviceAccountName: paralus-kratos
      containers:
        - name: kratos
          image: oryd/kratos:v26.2.0
          imagePullPolicy: IfNotPresent
          command:
            - kratos
          args:
            - serve
            - all
            - --config
            - /etc/config/kratos.yaml
            - --config
            - /etc/kratos/providers.yaml
            - --config
            - /etc/kratos/hooks/kratos-config-hooks.yaml
          volumeMounts:
            - mountPath: /etc/kratos
              name: other-configs
            - mountPath: /etc/kratos/hooks/kratos-config-hooks.yaml
              name: kratos-config-hooks
              subPath: kratos-config-hooks.yaml
            - name: kratos-config-volume
              mountPath: /etc/config
              readOnly: true
          ports:
            - name: http-admin
              containerPort: 4434
              protocol: TCP
            - name: http-public
              containerPort: 4433
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /admin/health/ready
              port: 4434
              httpHeaders:
                - name: Host
                  value: '127.0.0.1'
            failureThreshold: 5
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /admin/health/ready
              port: 4434
              httpHeaders:
                - name: Host
                  value: '127.0.0.1'
            failureThreshold: 5
            initialDelaySeconds: 5
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /admin/health/ready
              port: 4434
              httpHeaders:
                - name: Host
                  value: '127.0.0.1'
            failureThreshold: 60
            periodSeconds: 1
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 100
        - name: synchronizer
          image: 'paralusio/kratos-synchronizer:v0.3.0'
          volumeMounts:
            - name: other-configs
              mountPath: /etc/kratos
