gitops/apps/paralus/paralus-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paralus
  labels:
    app.kubernetes.io/part-of: paralus
    app.kubernetes.io/name: paralus
    app.kubernetes.io/instance: paralus
    app.kubernetes.io/component: workload
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: paralus
      app.kubernetes.io/instance: paralus
  template:
    metadata:
      annotations:
        checksum/config: c8ab218008f957accbf6eec4528c32b1a9e0ec0f84b3f42ae5f492a648bbf396
      labels:
        app.kubernetes.io/part-of: paralus
        app.kubernetes.io/name: paralus
        app.kubernetes.io/instance: paralus
        app.kubernetes.io/component: workload
    spec:
      serviceAccountName: paralus-ztka
      securityContext: {}
      volumes:
        - name: audit-logs
          emptyDir: {}
      containers:
        - name: paralus-tail
          securityContext: {}
          image: 'busybox:latest'
          command: ['sh', '-c', 'tail -F /audit-logs/audit.log 2>/tmp/tail-err']
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: audit-logs
              mountPath: /audit-logs
        - name: paralus
          securityContext: {}
          image: 'paralusio/paralus:v0.2.8'
          command: ['./paralus']
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: audit-logs
              mountPath: /audit-logs
          ports:
            - name: http
              containerPort: 11000
            - name: rpc
              containerPort: 10000
            - name: relay-peering
              containerPort: 10001
          resources: {}
---
